Refactored books controller
Now handles sort and tags through index

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,4 +1,8 @@
 .row
+  - if @tag
+    h2
+      | Books tagged with "#{@tag}"
+      span< = favorite_link_to @tag
   .large-12.columns.book_content
     = render 'books', :books => @books
 
