--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -4,7 +4,7 @@
   = form.input :url
   = form.input :year_created
   = label_tag :user_tags, 'Tag list'
-  = text_field_tag :user_tags, @book.tags_from(current_user)
+  = text_field_tag :user_tags, @book.tags_from(current_user).join(", ")
   small.hint Separate tags with commas.
   = form.input :description, input_html: {rows: 10}
   .row
